@@ -16,11 +16,13 @@
  */
 package org.apache.solr.cloud;
 
+import java.net.MalformedURLException;
 import java.net.URL;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.SolrTestCaseJ4.SuppressSSL;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.response.CollectionAdminResponse;
+import org.apache.solr.common.util.SuppressForbidden;
 import org.apache.solr.embedded.JettyConfig;
 import org.apache.solr.embedded.JettySolrRunner;
 import org.junit.Test;
@@ -60,13 +62,19 @@ public class TestRequestForwarding extends SolrTestCaseJ4 {
       };
       for (String q : queryStrings) {
         try {
-          URL url = new URL(jettySolrRunner.getBaseUrl().toString() + "/collection1/select?" + q);
+          URL url = createURL(jettySolrRunner.getBaseUrl().toString() + "/collection1/select?" + q);
           url.openStream(); // Shouldn't throw any errors
         } catch (Exception ex) {
           throw new RuntimeException("Query '" + q + "' failed, ", ex);
         }
       }
     }
+  }
+
+  // Restricting the Scope of Forbidden API
+  @SuppressForbidden(reason = "java.net.URL#<init> deprecated since Java 20")
+  private URL createURL(String url) throws MalformedURLException {
+    return new URL(url);
   }
 
   private void createCollection(String name, String config) throws Exception {
